# Creditra-Contracts

./: .gitignore  C__Users_ADEBOW_1_AppData_Local_Temp_libtest_a_h.s  C__Users_ADEBOW_1_AppData_Local_Temp_test_lib_h.s  Cargo.toml  README.md
.github/workflows/: gas.yml  wasm-size.yml
contracts/: .gas-baseline.json
contracts/credit/: Cargo.toml
contracts/credit/docs/: CROSS_CHAIN.md  errors.md
contracts/credit/examples/: budget_baseline.rs
contracts/credit/src/: accrual.rs  attestation.rs  borrow.rs  collateral.rs  config.rs  cross_chain.rs  events.rs  fees.rs  freeze.rs  instrument.rs  lib.rs  lifecycle.rs  math_utils.rs  migrations.rs  query.rs  risk.rs  scoring.rs  settlement.rs  storage.rs  test_ttl.rs  types.rs  views.rs  views_tests.rs
contracts/credit/tests/: accrual_monotonic.rs  address_key_canonical.rs  atomic_repay_release.rs  batch_accrual.rs  borrower_key_encoding.rs  borrower_rate_ceiling.rs  borrower_rate_floor.rs  borrower_self_suspend.rs  budget_regression.rs  circuit_breaker.rs  close_factor_bps.rs  collateral.rs  conservation_cross_contract.rs  coverage_edge_cases.rs  credit_auction_e2e.rs  credit_limit_bounds.rs  cross_chain.rs  default_liquidation_auction_hook.rs  default_liquidation_settled_event.rs  error_discriminants.rs  event_block_ledger_seq.rs  event_bound_draw.rs  event_liq_req_payload.rs  event_topic_stability.rs  fee_split.rs  freeze_draws.rs  freeze_reason.rs  grace_waiver_event.rs  init_idempotency.rs  installment_advance_prop.rs  installment_interest_only_repay.rs  instrument.rs  invariant_accrued_le_utilized.rs  limit_increase_matrix.rs  math_safe_mul_div.rs  monotonic_timestamps.rs  oracle_deviation.rs  penalty_surcharge.rs  proptest_equity.proptest-regressions  proptest_equity.rs  (+13 more)
docs/: ARCHITECTURE.md  EXECUTION_QUALITY.md  GLOSSARY.md  INDEX.md  PROTOCOL_SPEC.md  RISK_PRICING.md  SCORING.md  SECURITY.md  contract-errors.md  contributing-tests.md  credit.md  deploy.md  error-taxonomy.md  errors.md  events-schema.md  scripts.md  state-machine.md  storage-layout.md  storage-tiers.md  threat-model.md  upgrade-policy.md
gateway-contract/contracts/auction_contract/: Cargo.toml
gateway-contract/contracts/auction_contract/.cargo/: config.toml
gateway-contract/contracts/auction_contract/fuzz/fuzz_targets/: dutch_price_monotone.rs
gateway-contract/contracts/auction_contract/proofs/: dutch_price.rs
gateway-contract/contracts/auction_contract/src/: curves.rs  errors.rs  lib.rs  storage.rs  test.rs  types.rs
gateway-contract/contracts/auction_contract/tests/: auth_settle.rs  curves.rs  refund_atomic.rs  status_transitions.rs  transition_matrix.rs
scripts/: README.md  check-wasm-size.sh  gas-regression.sh  list_contract_errors.py  regen_budget_baseline.sh  test_check_wasm_size.sh
