[package]
name = "creditra-credit"
version = "0.1.0"
edition = "2021"
description = "Creditra credit line Soroban contract"
license = "MIT"
keywords = ["soroban", "stellar", "credit", "defi", "smart-contract"]
categories = ["cryptography::cryptocurrencies", "finance", "no-std"]
readme = "../../README.md"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
gateway-auction = { path = "../../gateway-contract/contracts/auction_contract" }
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1.4"
# U256 reference arithmetic for the math_utils::mul_div property test.
primitive-types = "0.12"
