[package]
name = "gateway-auction"
version = "0.1.0"
edition = "2021"
description = "Simple auction contract for testing BidRefundedEvent emission"
license = "MIT"
keywords = ["soroban", "stellar", "auction", "smart-contract"]
categories = ["cryptography::cryptocurrencies", "no-std"]
readme = "auction.md"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dutch_price"
path = "proofs/dutch_price.rs"
required-features = []

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
kani = { version = "0.60.0" }

 
